# awesome-crates

./: .env  .gitignore  .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: ci.yml
opendal/: Cargo.toml
opendal/src/: main.rs
src/: main.rs
tarpc/: Cargo.toml
tarpc/src/: lib.rs
tonic/: Cargo.toml  build.rs
tonic/src/proto-gen/: basic.rs  goodbye.rs  hello.rs
utoipa/: Cargo.toml
utoipa/src/: main.rs  todo.rs
