[workspace]
resolver = "2"
members = [
    "opendal",
    "tarpc"
]

[workspace.package]
version = "0.24.0"
edition = "2021"
authors = ["jiannei <longjian.huang@foxmail.com>"]
rust-version = "1.70.0"

[workspace.dependencies]
anyhow = { version = "1.0.93", default-features = false }
dotenvy = { version = "0.15.7", default-features = false }
futures = { version = "0.3.31", default-features = false }
log = { version = "0.4.22", default-features = false }
opendal = { version = "0.50.1", default-features = false }
tokio = { version = "1.41.0", default-features = false }
tarpc = { version = "0.35.0", default-features = false }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false }
