[package]
name = "opendal-demo"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }

[features]
default = ["fs"]

fs = ["opendal/services-fs"]
redis = ["opendal/services-redis"]

[dependencies]
anyhow = { workspace = true }
dotenvy = { workspace = true }
log = { workspace = true }
opendal = { workspace = true, features = ["layers-tracing"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
