[package]
name = "tarpc-demo"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }

[lib]
name = "service"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
tarpc = { workspace = true, features = ["full"] }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread"] }