[package]
name = "tonic-demo"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }

[lib]
name = "service"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
prost = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tonic = { workspace = true, features = ["default"] }

[build-dependencies]
tonic-build = { workspace = true, features = ["default"] }

