[package]
name = "utoipa-demo"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }

[dependencies]
axum = { workspace = true, features = ["http1", "json", "tokio"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
utoipa = { workspace = true, features = ["macros"] }
