[package]
name = "utoipa-demo"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }

[dependencies]
axum = { workspace = true, features = ["http1", "json", "query", "tokio"] }
hyper = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
utoipa = { workspace = true, features = ["macros"] }
utoipa-axum = { workspace = true }
utoipa-rapidoc = { workspace = true, features = ["axum"] }
utoipa-redoc = { workspace = true, features = ["axum"] }
utoipa-scalar = { workspace = true, features = ["axum"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
